--- a/ResumeBuilder.xcodeproj/xcshareddata/xcschemes/ResumeBuilder.xcscheme
+++ b/ResumeBuilder.xcodeproj/xcshareddata/xcschemes/ResumeBuilder.xcscheme
@@ -51,6 +51,20 @@
             ReferencedContainer = "container:ResumeBuilder.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "--formats html"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--formats pdf"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--help"
+            isEnabled = "NO">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
